--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "dependencies": {
     "core-js": "^3.8.3",
     "echarts": "^5.3.2",
-    "vue": "^3.2.13"
+    "echarts-wordcloud": "^2.0.0",
+    "vue": "^3.2.13",
+    "vue2": "^1.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
